YAS-CA/objects/PMD_Output__c.object
<CustomObject>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <label>Line</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Set__c</fullName>
        <label>Rule Set</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>PMD Output</label>
    <nameField>
        <displayFormat>PMD-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMD Outputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>